# gcp-set-up

./: Dockerfile  Makefile  bootstrap.sh  pyproject.toml
.github/workflows/: deploy.yml
api/: main.py
